@@ -13,8 +13,8 @@
 var BD18 = {};
 BD18.noteTimeout = null; // Used by doLogNote().
 BD18.welcomename = null; // Used by doLogNote().
-BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V1.3";
-BD18.version = "1.4.0";
+BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V1.4";
+BD18.version = "1.4.1";
 
 /* Function setPage() adjusts the height and width
  * of rightofpage and the height of lefttofpage.
